--- a/nowhere_continuous_wpo.tex
+++ b/nowhere_continuous_wpo.tex
@@ -50,7 +50,7 @@ Such function contradicts Lemma 1 in~\cite{VasileBerinde2011}.
 \begin{definition}[{{\cite[Definition 2]{VasileBerinde2011}}}]
     Let $X$ be a metric space.
     We say that a mapping $f \colon X \to X$ is a \define{weakly Picard operator} if
-    for each $x \in X$ the sequence $(f^n(x))_{n \in \N}$
+    for each $x \in X$ the sequence $\paren{f^n\paren{x})}_{n \in \N}$
     is convergent to $b_x \in X$, which is a fixed point of $f$.
 \end{definition}
 
