font in gcd changed to mathtt

--- a/nowhere_continuous_wpo.tex
+++ b/nowhere_continuous_wpo.tex
@@ -25,6 +25,7 @@
 \newcommand{\define}[1]{\textit{#1}}
 \newcommand{\paren}[1]{\! \left(#1 \right)}
 \newcommand{\set}[1]{\! \left\{#1 \right\}}
+\renewcommand{\gcd}{\mathtt{gcd}}
 
 
 \theoremstyle{plain}
