--- a/nowhere_continuous_wpo.tex
+++ b/nowhere_continuous_wpo.tex
@@ -43,7 +43,18 @@
 
 \renewcommand{\GenericWarning}[2]{\GenericError{#1}{#2}{}{This warning has been turned into a fatal error.}}
 
+\newcommand\blfootnote[1]{%
+    \bgroup{}
+    \renewcommand\thefootnote{\fnsymbol{footnote}}%
+    \renewcommand\thempfootnote{\fnsymbol{mpfootnote}}%
+    \footnotetext[0]{#1}%
+    \egroup{}
+}
+
 \begin{document}
+\blfootnote{Repository with the most recent version of
+    \href{https://raw.githubusercontent.com/vil02/nowhere_continuous_wpo/master/generated/nowhere_continuous_wpo.pdf}{this document}: \\
+    \url{https://github.com/vil02/nowhere_continuous_wpo}}
 \noindent Piotr Idzik \hfill ver. \today\ \currenttime{}
 
 \vspace*{1cm}
